--- a/hh_ru.html
+++ b/hh_ru.html
@@ -2,5 +2,9 @@
 <html>
     <head>
         <meta chatset="utf-8"/>
+        <link rel="stylesheet" href="style.css"/>
     </head>
+    <body>
+        <p>Hello world!</p>
+    </body>
 </html>
